--- a/public/menu-upload.html
+++ b/public/menu-upload.html
@@ -9,17 +9,14 @@
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
     import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
-    import { getStorage, ref, uploadBytes, getDownloadURL } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js';
+    import { getStorage, ref, uploadBytes } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js';
     import { getFirestore, collection, addDoc, serverTimestamp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
     import { firebaseConfig } from './js/firebase-config.js';
-    import * as pdfjsLib from '/pdfjs/build/pdf.js';
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const storage = getStorage(app);
     const db = getFirestore(app);
-
-    pdfjsLib.GlobalWorkerOptions.workerSrc = '/pdfjs/build/pdf.worker.js';
 
     const menuForm = document.getElementById('menuForm');
     const mensaje = document.getElementById('mensaje');
@@ -34,6 +31,7 @@
         window.location.href = "login.html";
         return;
       }
+
       await user.getIdToken(true);
     });
 
@@ -59,8 +57,6 @@
         const storageRef = ref(storage, 'menu.pdf');
         await uploadBytes(storageRef, file);
 
-        await convertirPdfAYSubirImagenes(file);
-
         await addDoc(collection(db, 'logs'), {
           usuario: auth.currentUser.email,
           accion: 'admin_subida_menu',
@@ -78,127 +74,32 @@
         document.getElementById("loader").style.display = "none";
       }
     });
-
-    async function convertirPdfAYSubirImagenes(pdfFile) {
-      const arrayBuffer = await pdfFile.arrayBuffer();
-      const pdf = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
-
-      for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
-        const page = await pdf.getPage(pageNum);
-        const viewport = page.getViewport({ scale: 2 });
-
-        const canvas = document.createElement('canvas');
-        const context = canvas.getContext('2d');
-        canvas.height = viewport.height;
-        canvas.width = viewport.width;
-
-        await page.render({ canvasContext: context, viewport }).promise;
-
-        const blob = await new Promise(resolve => canvas.toBlob(resolve, 'image/jpeg', 1.0));
-        const storageRef = ref(storage, `menu-img/pagina-${pageNum}.jpg`);
-        await uploadBytes(storageRef, blob);
-      }
-    }
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Syncopate&display=swap" rel="stylesheet"> <!-- Tipografías personalizadas --> <!--//Agrego para uso de letra -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/components/buttons.css" />
   <link rel="stylesheet" href="css/layout.css" />
-  <style>
-    body {
-      background-color: #fdfcf7;
-      font-family: Playfair Display, sans-serif;
-    }
-    .menu-style {
-      background-color: #003941;
-      border-radius: 20px;
-      padding: 40px 30px;
-      max-width: 480px;
-      margin: 60px auto;
-      color: white;
-      text-align: center;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-    .titulo {
-      font-size: 20px;
-      text-transform: uppercase;
-      margin-bottom: 20px;
-      letter-spacing: 1px;
-    }
-    input, button {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      margin: 12px 0;
-      border-radius: 8px;
-      border: none;
-      box-sizing: border-box;
-    }
-    input[type="file"] {
-      background: white;
-    }
-    input[type="text"] {
-      background: #f4f4f4;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #d86634;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background-color 0.2s;
-    }
-    button:hover {
-      background-color: #c25427;
-    }
-    .msg {
-      margin-top: 20px;
-      font-weight: bold;
-      color: white;
-    }
-    .file-upload {
-      text-align: left;
-      margin: 12px 0;
-    }
-    #menuFile {
-      display: none;
-    }
-    .boton-archivo {
-      display: inline-block;
-      padding: 10px 16px;
-      background-color: white;
-      color: #d86634;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      border: none;
-      font-size: 14px;
-    }
-    #archivoNombre {
-      display: inline-block;
-      margin-left: 12px;
-      font-size: 14px;
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="css/admin.css" />
+  <link rel="stylesheet" href="css/base.css" />
 </head>
 <body>
   <div class="menu-style">
-    <h1 class="titulo">Subir nuevo Menú</h1>
+    <h5>Subir nuevo Menú</h5>
     <form id="menuForm">
-      <div class="file-upload">
-        <label for="menuFile" class="boton-archivo">Seleccionar archivo</label>
-        <span id="archivoNombre">Ningún archivo seleccionado</span>
-        <input type="file" id="menuFile" accept="application/pdf" required />
+      <div class="file-upload" style="display: flex; flex-direction: column; align-items: center;">
+        <label for="menuFile" class="btn-secondary">Seleccionar archivo</label>
+        <span id="archivoNombre" style="margin-top: 10px; font-size: 16px; text-align: center;">Ningún archivo seleccionado</span>
+        <input type="file" id="menuFile" accept="application/pdf" required style="display: none;" />
       </div>
-      <!-- Comentario eliminado -->
-      <button type="submit">Subir Menú</button>
+      <div style="margin-top: 30px;">
+        <button type="submit" class="btn-primary">Subir Menú</button>
+      </div>
     </form>
     <div id="mensaje" class="msg"></div>
   <div id="loader" style="display: none; margin-top: 20px; text-align: center; width: 100%;">
     <img src="css/img/logo_original_sin_fondo.png" class="galope" style="width: 95px; display: inline-block;">
   </div>
-    <div class="logout">
-      <a href="admin.html" class="volver">Volver</a>
+    <div>
+      <a href="admin.html" class="btn-volver">Volver</a>
     </div>
   </div>
 
