--- a/public/registro.html
+++ b/public/registro.html
@@ -78,7 +78,7 @@
       </div>
     </div>
   </div>
-  <div class="logout">
+  <div>
     <a href="index.html" class="btn-volver" aria-label="Volver al inicio">Ir a página principal</a>
   </div>
   <div id="coupon-birds-embed-div"></div>
