--- a/public/usuarios.html
+++ b/public/usuarios.html
@@ -9,52 +9,46 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="css/components/buttons.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Syncopate&display=swap" rel="stylesheet">
   <script type="module" src="js/firebase-auth.js"></script>
 </head>
+</head>
 <body>
   <div class="menu-style">
-    <nav class="menu-hamburguesa">
-      <input type="checkbox" id="menu-toggle">
-      <label for="menu-toggle" class="menu-icon">☰</label>
-      <ul class="menu-links" id="menuLinks">
-        <li><a href="admin.html">Volver</a></li>
-      </ul>
-    </nav>
-    <div class="info-usuario">
-      Usuario logueado: <span id="usuarioLogueado">-</span>
+
+    <h2>Gestión de Usuarios</h2>
+
+    <div style="display: flex; justify-content: flex-end; margin-bottom: 10px;">
+      <button id="btn-agregar-usuario" class="btn-primary">➕ Agregar usuario</button>
     </div>
 
-    <h1>Gestión de Usuarios</h1>
-    <form id="form-usuario" class="tarjeta-fidelidad">
+    <section class="tarjeta-fidelidad" style="margin-top: 20px;">
+      <h2>Usuarios Registrados</h2>
+      <div id="lista-usuarios" class="lista-usuarios">
+        <!-- Usuarios cargados dinámicamente -->
+      </div>
+    </section>
+
+    <form id="form-usuario" class="tarjeta-fidelidad" style="display: none;">
       <input type="email" id="email" placeholder="Email" required />
       <input type="text" id="nombre" placeholder="Nombre" required />
-      <select id="rol">
+      <select id="rol" class="input-rol">
         <option value="empleado">Empleado</option>
         <option value="encargado">Encargado</option>
         <option value="duenio">Dueño</option>
         <option value="dev">Dev</option>
       </select>
-      <button type="submit">Guardar</button>
+      <button type="submit" class="btn-primary">Guardar</button>
+      <button type="button" id="btn-cancelar" class="btn-secondary">Cancelar</button>
     </form>
 
-    <section class="tarjeta-fidelidad" style="margin-top: 20px;">
-      <h2>Usuarios Registrados</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Email</th>
-            <th>Nombre</th>
-            <th>Rol</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-        <tbody id="lista-usuarios">
-          <!-- Usuarios cargados dinámicamente -->
-        </tbody>
-      </table>
-    </section>
-
+    <div id="loader" style="display: none; margin-top: 20px; display: flex; justify-content: center; align-items: center;">
+      <img src="css/img/logo_original_sin_fondo.png" class="galope" style="width: 80px;" />
+    </div>
+    <div>
+      <a href="admin.html" class="btn-volver">Volver</a>
+    </div>
     <div class="logout" style="margin-top: 40px;">
       <a href="#" onclick="cerrarSesion()" class="cerrar">Cerrar sesión</a>
     </div>
@@ -90,31 +84,153 @@
 
   <script type="module">
   async function cargarUsuarios() {
+    document.getElementById("loader").style.display = "block";
     try {
-      const response = await fetch('https://us-central1-sandbox-cafe-emilianofil.cloudfunctions.net/api', {
+      const response = await fetch('https://us-central1-sandbox-cafe-emilianofil.cloudfunctions.net/api/usuarios', {
         method: 'GET',
         mode: 'cors'
       });
       if (!response.ok) throw new Error('Error al obtener usuarios');
       const usuarios = await response.json();
 
-      const tbody = document.getElementById("lista-usuarios");
-      tbody.innerHTML = "";
+      const contenedor = document.getElementById("lista-usuarios");
+      contenedor.innerHTML = "";
 
       usuarios.forEach(usuario => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${usuario.email}</td>
-          <td>${usuario.nombre || "-"}</td>
-          <td>${usuario.rol || "empleado"}</td>
-          <td><!-- Acciones futuras --></td>
+        const tarjeta = document.createElement("div");
+        tarjeta.className = "usuario-card";
+        tarjeta.innerHTML = `
+          <p><strong>Email:</strong> ${usuario.email}</p>
+          <p><strong>Nombre:</strong> ${usuario.displayName || "-"}</p>
+          <p><strong>Rol:</strong> ${usuario.rol || "empleado"}</p>
+          <div class="acciones">
+            <button class="btn-primary" onclick="editarUsuario('${usuario.email}', '${usuario.displayName || ""}', '${usuario.rol || "empleado"}')">✏️ Editar</button>
+            <button class="btn-secondary" onclick="eliminarUsuario('${usuario.email}')">🗑️ Eliminar</button>
+          </div>
         `;
-        tbody.appendChild(tr);
+        contenedor.appendChild(tarjeta);
       });
+      document.getElementById("loader").style.display = "none";
     } catch (error) {
       console.error("Error cargando usuarios:", error);
+      document.getElementById("loader").style.display = "none";
     }
   }
+
+  let editandoUsuario = false;
+  let usuarioOriginalEmail = "";
+
+  document.getElementById("form-usuario").addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    const nombre = document.getElementById("nombre").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const rol = document.getElementById("rol").value;
+    const password = email.split("@")[0];
+
+    if (editandoUsuario) {
+      // Modo edición
+      try {
+        const res = await fetch(`https://us-central1-sandbox-cafe-emilianofil.cloudfunctions.net/api/usuarios/${encodeURIComponent(usuarioOriginalEmail)}`, {
+          method: "PUT",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ email, displayName: nombre, rol })
+        });
+
+        if (res.ok) {
+          alert("✅ Usuario actualizado");
+          document.getElementById("form-usuario").reset();
+          document.getElementById("btn-cancelar").style.display = "none";
+          editandoUsuario = false;
+          usuarioOriginalEmail = "";
+          document.getElementById("form-usuario").style.display = "none";
+          document.getElementById("lista-usuarios").style.display = "block";
+          cargarUsuarios();
+        } else {
+          const error = await res.text();
+          alert("❌ Error: " + error);
+        }
+      } catch (err) {
+        console.error(err);
+        alert("❌ Error inesperado al actualizar el usuario");
+      }
+    } else {
+      // Modo creación
+      try {
+        const res = await fetch("https://us-central1-sandbox-cafe-emilianofil.cloudfunctions.net/api/usuarios", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ email, password, displayName: nombre, rol })
+        });
+
+        if (res.ok) {
+          alert("✅ Usuario creado con éxito");
+          document.getElementById("form-usuario").reset();
+          document.getElementById("btn-cancelar").style.display = "none";
+          document.getElementById("form-usuario").style.display = "none";
+          document.getElementById("lista-usuarios").style.display = "block";
+          cargarUsuarios();
+        } else {
+          const error = await res.text();
+          alert("❌ Error: " + error);
+        }
+      } catch (err) {
+        console.error(err);
+        alert("❌ Error inesperado al crear el usuario");
+      }
+    }
+  });
+
+  document.getElementById("btn-cancelar").addEventListener("click", () => {
+    document.getElementById("form-usuario").reset();
+    document.getElementById("btn-cancelar").style.display = "none";
+    editandoUsuario = false;
+    usuarioOriginalEmail = "";
+    document.getElementById("form-usuario").style.display = "none";
+    document.getElementById("lista-usuarios").style.display = "block";
+  });
+
+  window.editarUsuario = function(email, nombre, rol) {
+    document.getElementById("email").value = email;
+    document.getElementById("nombre").value = nombre;
+    document.getElementById("rol").value = rol;
+    alert("Editá los campos y volvé a guardar para actualizar el usuario.");
+    document.getElementById("btn-cancelar").style.display = "inline-block";
+    editandoUsuario = true;
+    usuarioOriginalEmail = email;
+    document.getElementById("lista-usuarios").style.display = "none";
+    document.getElementById("form-usuario").style.display = "block";
+  };
+
+  window.eliminarUsuario = async function(email) {
+    if (!confirm(`¿Seguro que querés eliminar a ${email}?`)) return;
+
+    try {
+      const res = await fetch(`https://us-central1-sandbox-cafe-emilianofil.cloudfunctions.net/api/usuarios/${encodeURIComponent(email)}`, {
+        method: "DELETE"
+      });
+
+      if (res.ok) {
+        alert("🗑️ Usuario eliminado");
+        cargarUsuarios();
+      } else {
+        const error = await res.text();
+        alert("❌ Error: " + error);
+      }
+    } catch (err) {
+      console.error(err);
+      alert("❌ Error inesperado al eliminar el usuario");
+    }
+  };
+
+  document.getElementById("btn-agregar-usuario").addEventListener("click", () => {
+    document.getElementById("form-usuario").reset();
+    document.getElementById("btn-cancelar").style.display = "inline-block";
+    editandoUsuario = false;
+    usuarioOriginalEmail = "";
+    document.getElementById("lista-usuarios").style.display = "none";
+    document.getElementById("form-usuario").style.display = "block";
+  });
 
   cargarUsuarios();
 </script>
